--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/joshverd/react-brid-player-fork#readme",
   "dependencies": {
+    "@types/react": "^17.0.0",
     "react": "^16.13.1"
   }
 }
