--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-brid-player-fork",
-  "version": "1.0.1",
-  "description": "A fork of react-brid-player",
-  "main": "index.js",
+  "name": "react-brid-player-typescript",
+  "version": "1.0.4",
+  "description": "A fork of react-brid-player with Typescript support",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,9 @@
   "homepage": "https://github.com/joshverd/react-brid-player-fork#readme",
   "dependencies": {
     "@types/react": "^17.0.0",
-    "react": "^16.13.1"
+    "@types/react-dom": "^17.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "typescript": "^4.1.3"
   }
 }
