--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,20 +3,18 @@
 		"moduleResolution": "node",
     "jsx": "react",
 		"noImplicitAny": true,
+		"declaration": true,
 		"strict": true,
 		"lib": [
 			"DOM",
-			"es2018",
+			"es2018"
 		],
 		"module": "commonjs",
 		"target": "es6",
 		"allowJs": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
-		"baseUrl": "./",
-		"paths": {
-			"types/*": [ "./types/*" ],
-		}
+		"outDir": "dist"
 	},
 	"exclude": [
     "node_modules",
