--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-brid-player-typescript",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "A fork of react-brid-player with Typescript support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
