Replace npm predeploy with build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "./node_modules/.bin/tsc"
+    "build": "./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
